--- a/styles/main.css
+++ b/styles/main.css
@@ -79,10 +79,17 @@ a {
     margin-top: 57px;
     color: black;
     margin-bottom: 45px;
+    
+}
+
+.menu_logo:focus {
+    outline: none;
+    transform: scale(1.2);
 }
 
 .menu_item {
     margin-top: 25px;
+    transition: all 0.15s ease-in;
 }
 
 .menu_item-link {
@@ -92,6 +99,31 @@ a {
     line-height: 1.5;
     color: black;
     padding-left: 40px;
+    transition: all 0.1s ease-in;
+}
+
+.menu_item-link:hover {
+    outline: 1px solid rgb(36, 32, 32, 50%);
+    border-radius: 5px;
+    outline-offset: 7px;
+}
+
+.menu_item-link:focus {
+    outline: 1px solid rgb(36, 32, 32, 50%);
+    border-radius: 5px;
+    outline-offset: 7px;
+}
+
+.menu_item-link:active {
+    outline: 1px solid rgb(36, 32, 32);
+    border-radius: 5px;
+    outline-offset: 7px;
+    color: black;
+    opacity: 0.5;
+}
+
+.menu_item:hover {
+    transform: scale(1.05);    
 }
 
 .newin_img {
@@ -148,6 +180,22 @@ a {
     bottom: 60px;
 }
 
+.menu_help:hover {
+    transform: scale(1.2);
+    color: rgb(26, 25, 25, 60%);
+}
+
+.menu_help:focus {
+    outline: 1px solid rgb(36, 32, 32, 50%);
+    border-radius: 5px;
+    outline-offset: 7px;
+}
+
+.menu_help:active {
+    outline: none;
+    color: black;
+}
+
 .help_icon {
     background-image: url(../images/help.svg);
     background-repeat: no-repeat;
@@ -159,6 +207,27 @@ a {
     grid-column: 2/4;
     width: 100%;
     height: 24px;
+}
+
+.search_input:hover {
+    cursor: pointer;
+    background-color: rgb(24, 23, 23, 10%);
+    width: 100%;
+    height: 30px;
+    border-radius: 10px;
+}
+
+.search_input:active  {
+    width: 100%;
+    border: 1px solid rgb(24, 23, 23, 10%);
+    border-radius: 15px;
+}
+
+.search_input:focus {
+    border: 1px solid rgb(24, 23, 23, 10%);
+    border-radius: 15px;
+    width: 100%;
+    height: 30px;
 }
 
 .search_button, .search_input {
@@ -173,6 +242,18 @@ a {
     line-height: 22px;
 }
 
+.search_button {
+    cursor: pointer;
+}
+
+.search_button:hover path {
+    fill:  rgb(24, 23, 23, 50%);
+}
+
+.search_button:hover svg {
+    transform: scale(1.2);
+}
+
 .nav {
     grid-column: 4/6;
     grid-row: 1;
@@ -184,6 +265,11 @@ a {
 
 .nav_item {
     margin-right: 42px;
+    transition: all 0.15s ease-in;
+}
+
+.nav_item:hover {
+    transform: scale(1.3);
 }
 
 .nav_item-link {
@@ -192,10 +278,88 @@ a {
     font-size: 16px;
     line-height: 1.5;
     color: black;
+    transition: all 0.15s ease-in;
+}
+
+.nav_item-link:hover {
+    color: rgb(128, 128, 128);
+}
+
+.nav_item-link:focus {
+    outline: 3px solid rgb(10, 10, 10, 50%);
+    outline-offset: 5px;
+    border-radius: 3px;
+}
+
+.nav_item-link:active {
+    color: rgb(10, 10, 10, 40%);
+    outline: none;
+    border: none;
 }
 
 .basket_link {
     margin-right: 25px;
+    transition: all ease;
+}
+
+.basket_link:hover path {
+    fill: rgb(10, 10, 10, 40%);    
+    transform: scale(1.1);
+}
+
+.basket_link:hover svg {
+    transform: rotate(360deg);
+    transition-duration: 1.5s;
+}
+
+.basket_link:focus svg {
+    transform: scale(1.3);
+}
+
+.basket_link:focus path {
+    fill: rgb(10, 10, 10, 40%);
+}
+
+.basket_link:focus {
+    outline: none;
+}
+
+.basket_link:active path {
+    fill: black;
+}
+
+.account_link:hover path {
+    fill: rgb(10, 10, 10, 40%);    
+    transform: scale(1.1);
+}
+
+.account_link:hover svg {
+    transform: rotate(360deg);
+    transition-duration: 1.5s;
+}
+
+.account_link:focus path {
+    fill: rgb(10, 10, 10, 40%);
+    outline: none;
+}
+
+.account_link:focus {    
+    outline: none;   
+}
+
+.account_link:focus svg {
+    transform: scale(1.3);
+}
+
+.account_link:active path {
+    fill: black;
+    border: none;
+    outline: none;
+}
+
+.account_link:active svg {
+    border: none;
+    outline: none;
 }
 
 .offer {
